# minicbor-typed-arrays

./: .cargo-crap.toml  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
docs/superpowers/plans/: 2026-06-24-typed-arrays-v2.md
docs/superpowers/specs/: 2026-06-24-typed-arrays-v2-design.md
scripts/: ci.sh
src/: element.rs  endianness.rs  lib.rs  tag.rs  typed_array.rs  typed_array_context.rs  typed_array_tag.rs
tests/: roundtrip.rs
