[package]
name = "minicbor-typed-arrays"
authors = ["Lucas Chiesa <lucas.chiesa@gmail.com>", "Joaquin de Andres <xcancerberox@gmail.com>"]
description = "RFC8746 typed arrays implementation for minicbor."
version = "0.2.0"
license = "BlueOak-1.0.0"
edition = "2021"

[dependencies]
minicbor = { version = "2.2", default-features = false }
half = { version = "2.7", default-features = false, optional = true }

[dev-dependencies]
test-case = "3"
minicbor = { version = "2.2", features = ["std"] }

[features]
default = ["std", "half"]
std = ["alloc", "minicbor/std"]
alloc = ["minicbor/alloc"]
half = ["dep:half"]
